--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UltiMeme</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 
 <body onload="init()">
@@ -116,12 +116,12 @@
     </footer>
     <!-- <div class="container-for-upload"></div> -->
 
-    <script src="js/meme-utils.js"></script>
-    <script src="js/mouse-events.js"></script>
-    <script src="js/services/storage-service.js"></script>
-    <script src="js/services/meme-service.js"></script>
-    <script src="js/services/upload-service.js"></script>
-    <script src="js/meme-controller.js"></script>
+    <script src="./js/meme-utils.js"></script>
+    <script src="./js/mouse-events.js"></script>
+    <script src="./js/services/storage-service.js"></script>
+    <script src="./js/services/meme-service.js"></script>
+    <script src="./js/services/upload-service.js"></script>
+    <script src="./js/meme-controller.js"></script>
 </body>
 
 </html>
