--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 
     <script src="./js/meme-utils.js"></script>
     <script src="./js/mouse-events.js"></script>
-    <script src="./js/services/storage-service.js"></script>
-    <script src="./js/services/meme-service.js"></script>
-    <script src="./js/services/upload-service.js"></script>
+    <script src="./js/storage-service.js"></script>
+    <script src="./js/meme-service.js"></script>
+    <script src="./js/upload-service.js"></script>
     <script src="./js/meme-controller.js"></script>
 </body>
 
