--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
     </footer>
     <!-- <div class="container-for-upload"></div> -->
 
-    <script src="./js/meme-utils.js"></script>
-    <script src="./js/mouse-events.js"></script>
-    <script src="./js/storage-service.js"></script>
-    <script src="./js/meme-service.js"></script>
-    <script src="./js/upload-service.js"></script>
-    <script src="./js/meme-controller.js"></script>
+    <script src="js/meme-utils.js"></script>
+    <script src="js/mouse-events.js"></script>
+    <script src="js/storage-service.js"></script>
+    <script src="js/meme-service.js"></script>
+    <script src="js/upload-service.js"></script>
+    <script src="js/meme-controller.js"></script>
 </body>
 
 </html>
